<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context="za.co.tagtron.tagtronuhf.MainActivity" >

   <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:layout_margin="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_new_job_card" />

   <Button
	    android:id="@+id/button_config"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:layout_margin="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_config" />
    
   
    
   <ImageView 
       android:id="@+id/image_logo"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:layout_marginTop="20dp"
       android:contentDescription="@string/tagtron_logo"
       android:src="@drawable/logo_transparent"/>

</LinearLayout>