<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.tagtron.tagtronuhf.InspectionActivity" >

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        android:enabled="false" />
    
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDate"
        android:layout_below="@+id/editTextDate"
		android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_inspector_name" >
        <requestFocus />
    </EditText>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:layout_marginBottom="10dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal" >
    
	    <Button
	        android:id="@+id/buttonInspectionOk"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:layout_weight="1"
	        android:text="@string/button_inspection_ok"/>
	
	    <Button
	        android:id="@+id/buttonInspectionFailed"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_inspection_failed" />
	</LinearLayout>
</RelativeLayout>
